# merge-o-matic-viewer

./: README.md  merge-o-matic-viewer.desktop  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
debian/: changelog  control  copyright  files  watch
debian/upstream/: metadata
po/: merge-o-matic-viewer.pot  sv.po
po/locale/sv/LC_MESSAGES/: merge-o-matic-viewer.mo
src/merge_o_matic_viewer/: main.py
