[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merge-o-matic-viewer"
version = "0.1.3"
description = "GTK4 merge helper for Ubuntu-Debian synchronization"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
merge-o-matic-viewer = "merge_o_matic_viewer.main:main"

[tool.setuptools.packages.find]
where = ["src"]
